--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: sans-serif;
-            background-color: #f2a8a8;
+            background-color: rgb(253 102 95);
             overflow: hidden;
             height: 100vh;
             display: flex;
@@ -35,6 +35,7 @@
             opacity: 0.9;
             width: 50px;
             height: 50px;
+             z-index: 1;
         }
 
         .star.background-star {
@@ -64,7 +65,9 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
-            font-size: 1.5em;
+            font-size: 1.2em; 
+            font-weight: bold; 
+            white-space: nowrap; 
         }
 
         .instruction-hidden { display: none; }
@@ -84,9 +87,9 @@
         .card-container.visible { opacity: 1; }
 
         .card {
-            width: 80px;
-            height: 120px;
-            border: 2px solid #2980b9;
+            width: 100px; 
+            height: 150px; 
+            border: 4px solid #fff;  
             border-radius: 10px;
             margin: 0 10px;
             cursor: pointer;
@@ -95,28 +98,29 @@
         }
 
         .next-button {
-            background-color: #ffd700;
+           background-color: #ffeb3b; 
             color: #000;
-            padding: 10px 20px;
-            border-radius: 10px;
+            padding: 15px 30px; 
+            border-radius: 15px; 
             border: none;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 18px; 
             margin-top: 20px;
             display: none;
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
-            bottom: 5%;
+            bottom: 23%;
+            z-index: 2; 
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2); 
         }
 
         .card-title {
             text-align: center;
             font-size: 1.5em;
-            margin-bottom: 20px;
-            color: #fff;
+            color: #ffd700; 
             position: absolute;
-            top: 100px;
+            top: 220px;
             left: 50%;
             transform: translateX(-50%);
         }
@@ -126,7 +130,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="instruction">Думай о своем вопросе и выбери 3 звезды</div>
+    <div class="instruction">Думай о своем вопросе <br> и выбери <span style="color: #ffd700;">3 звезды</span></div>
     <div class="card-title card-title-hidden">Твои карты:</div>
     <div class="card-container"></div>
     <button class="next-button">Далее ></button>
@@ -205,8 +209,8 @@
             "╨Т╨╡╤А╤Е╨╛╨▓╨╜╨░╤П ╨Ц╤А╨╕╤Ж╨░.png", "╨Ф╤М╤П╨▓╨╛╨╗.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
             "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
             "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
-            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ч╨▓╨╡╨╖╨┤╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╤А╨╕╤Ж╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╨╛╤А.png",
+            "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ч╨▓╨╡╨╖╨┤╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╤А╨╕╤Ж╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╨╛╤А.png",
             "╨Ш╨╡╤А╨╛╤Д╨░╨╜╤В.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
             "╨Ъ╨╛╤А╨╛╨╗╤М ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
             "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╨╗╨╡╤Б╨╛ ╨д╨╛╤А╤В╤Г╨╜╤Л.png",
@@ -226,21 +230,19 @@
         ];
 
         selectedCardFilenames = [];
-        let availableFiles = [...cardFiles]; // *Copy* the array
+        let availableFiles = [...cardFiles]; 
 
-        // Select 3 UNIQUE filenames
         for (let i = 0; i < 3; i++) {
-            if (availableFiles.length === 0) break; // Prevent errors if not enough files
+            if (availableFiles.length === 0) break; 
             const randomIndex = Math.floor(Math.random() * availableFiles.length);
             selectedCardFilenames.push(availableFiles[randomIndex]);
-            availableFiles.splice(randomIndex, 1); // Remove the selected file
+            availableFiles.splice(randomIndex, 1); 
         }
 
 
         for (let i = 0; i < selectedCardFilenames.length; i++) {
             const card = document.createElement('div');
             card.classList.add('card');
-            //Key change is HERE. No more cyrillic
             const encodedFilename = encodeURIComponent(selectedCardFilenames[i]);
             card.style.backgroundImage = `url(${repoBaseUrl + encodedFilename})`;
 
