--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             font-family: sans-serif;
-            background-color: rgb(253 102 95);
+            background-color: rgb(237 129 124);
             overflow: hidden;
             height: 100vh;
             display: flex;
@@ -27,7 +27,6 @@
 
         .star {
             position: absolute;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>');
             background-size: contain;
             background-repeat: no-repeat;
             cursor: pointer;
@@ -40,16 +39,11 @@
 
         .star.background-star {
             opacity: 0.4;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%235a3535" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>');
         }
 
-        .star.selected {
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%23ffd700" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>');
-        }
 
         .star.darkened-selected {
             opacity: 0.4;
-            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="%235a3535" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg>');
         }
 
         .instruction {
@@ -65,9 +59,9 @@
             left: 50%;
             transform: translate(-50%, -50%);
             color: white;
-            font-size: 1.2em; 
-            font-weight: bold; 
-            white-space: nowrap; 
+            font-size: 1.2em;
+            font-weight: bold;
+            white-space: nowrap;
         }
 
         .instruction-hidden { display: none; }
@@ -87,9 +81,9 @@
         .card-container.visible { opacity: 1; }
 
         .card {
-            width: 100px; 
-            height: 150px; 
-            border: 4px solid #fff;  
+            width: 100px;
+            height: 150px;
+            border: 4px solid #fff;
             border-radius: 10px;
             margin: 0 10px;
             cursor: pointer;
@@ -98,27 +92,27 @@
         }
 
         .next-button {
-           background-color: #ffeb3b; 
+           background-color: #ffeb3b;
             color: #000;
-            padding: 15px 30px; 
-            border-radius: 15px; 
+            padding: 15px 30px;
+            border-radius: 15px;
             border: none;
             cursor: pointer;
-            font-size: 18px; 
+            font-size: 18px;
             margin-top: 20px;
             display: none;
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
             bottom: 23%;
-            z-index: 2; 
-            box-shadow: 0 2px 4px rgba(0,0,0,0.2); 
+            z-index: 2;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.2);
         }
 
         .card-title {
             text-align: center;
             font-size: 1.5em;
-            color: #ffd700; 
+            color: #ffd700;
             position: absolute;
             top: 200px;
             left: 50%;
@@ -130,7 +124,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="instruction">Думай о своем вопросе <br> и выбери <span style="color: #ffd700;">3 звезды</span></div>
+    <div class="instruction">Думай о своем вопросе <br> и выбери <span style="color: #ffd700;">3 </span>звезды</div>
     <div class="card-title card-title-hidden">Твои карты:</div>
     <div class="card-container"></div>
     <button class="next-button">Далее ></button>
@@ -151,16 +145,22 @@
     const nextButton = document.querySelector('.next-button');
     const cardTitle = document.querySelector('.card-title');
 
+    const starBaseUrl = "https://github.com/Vasiliy-katsyka/stars/blob/main/╨Ч╨▓╨╡╨╖╨┤╤Л/";
+    const regularStarFiles = ["Vector-2.png", "Vector-3.png", "Vector-5.png", "Vector-6.png", "Vector-7.png", "Vector-8.png", "Vector-9.png", "Vector-10.png", "Vector-11.png", "Vector-12.png", "Vector-13.png"];
+    const selectedStarFiles = ["Vector.png", "Vector-1.png", "Vector-4.png"];
+
     function selectStar(event) {
         const star = event.currentTarget;
         if (!cardContainer.classList.contains('visible') && !star.classList.contains('selected') && selectedStars < 3) {
+
+            const selectedStarFile = selectedStarFiles[Math.floor(Math.random() * selectedStarFiles.length)];
+            star.style.backgroundImage = `url(${starBaseUrl}${encodeURIComponent(selectedStarFile)}?raw=true)`;
             star.classList.add('selected');
             selectedStars++;
             if (selectedStars === 3) showCards();
         }
     }
-
-    function createStars() {
+   function createStars() {
         const containerRect = container.getBoundingClientRect();
         const instructionRect = instruction.getBoundingClientRect();
 
@@ -170,6 +170,9 @@
             const size = Math.floor(Math.random() * 21) + 40;
             star.style.width = `${size}px`;
             star.style.height = `${size}px`;
+
+            const randomStarFile = regularStarFiles[Math.floor(Math.random() * regularStarFiles.length)];
+            star.style.backgroundImage = `url(${starBaseUrl}${encodeURIComponent(randomStarFile)}?raw=true)`;
 
             let left, top, attempts = 0;
             do {
@@ -185,6 +188,7 @@
             stars.push(star);
         }
     }
+
 
     function isOverlapping(newStar, left, top, size) {
         for (const existingStar of stars) {
@@ -230,13 +234,13 @@
         ];
 
         selectedCardFilenames = [];
-        let availableFiles = [...cardFiles]; 
+        let availableFiles = [...cardFiles];
 
         for (let i = 0; i < 3; i++) {
-            if (availableFiles.length === 0) break; 
+            if (availableFiles.length === 0) break;
             const randomIndex = Math.floor(Math.random() * availableFiles.length);
             selectedCardFilenames.push(availableFiles[randomIndex]);
-            availableFiles.splice(randomIndex, 1); 
+            availableFiles.splice(randomIndex, 1);
         }
 
 
@@ -262,7 +266,10 @@
 
         stars.forEach(star => {
             star.classList.add('background-star');
-            if (star.classList.contains('selected')) star.classList.add('darkened-selected');
+            if (star.classList.contains('selected')) {
+                star.classList.add('darkened-selected');
+                // Keep selected star image, but change opacity
+            }
             star.style.cursor = 'default';
             star.removeEventListener('click', selectStar);
         });
@@ -288,6 +295,9 @@
         instruction.classList.remove('instruction-hidden');
         stars.forEach(star => {
             star.classList.remove('background-star', 'selected', 'darkened-selected');
+             const randomStarFile = regularStarFiles[Math.floor(Math.random() * regularStarFiles.length)];
+             star.style.backgroundImage = `url(${starBaseUrl}${encodeURIComponent(randomStarFile)}?raw=true)`;
+
             star.style.cursor = 'pointer';
             star.addEventListener('click', selectStar);
         });
