--- a/index.html
+++ b/index.html
@@ -208,30 +208,85 @@
         const cards = [];
         const repoBaseUrl = "https://raw.githubusercontent.com/Vasiliy-katsyka/stars/main/Cards-png%202/Cards-png/";
         const cardFiles = [
-            "╨С╨░╤И╨╜╤П.png", "╨Т╨╗╤О╨▒╨╗╨╡╨╜╨╜╤Л╨╡.png", "╨Т╨╛╨Б╤М╨╝╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
-            "╨Т╨╛╨Б╤М╨╝╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Т╨╛╨Б╤М╨╝╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Т╨╛╨Б╤М╨╝╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨Т╨╡╤А╤Е╨╛╨▓╨╜╨░╤П ╨Ц╤А╨╕╤Ж╨░.png", "╨Ф╤М╤П╨▓╨╛╨╗.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
-            "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
-            "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
-            "╨Ф╨▓╨╛╤И╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ч╨▓╨╡╨╖╨┤╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╤А╨╕╤Ж╨░.png", "╨Ш╨╝╨┐╨╡╤А╨░╤В╨╛╤А.png",
-            "╨Ш╨╡╤А╨╛╤Д╨░╨╜╤В.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
-            "╨Ъ╨╛╤А╨╛╨╗╤М ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
-            "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨Ъ╨╛╨╗╨╡╤Б╨╛ ╨д╨╛╤А╤В╤Г╨╜╤Л.png",
-            "╨Ъ╨╛╨╗╨╡╤Б╨╜╨╕╤Ж╨░.png", "╨Ы╤Г╨╜╨░.png", "╨Ь╨╕╤А.png", "╨Ь╨░╨│.png", "╨Ю╨▓╨╡╨╗╨╕╨║╨░.png", "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
-            "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨Я╤П╤В╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨Я╨╛╨▓╨╡╤И╨╡╨╜╨╜╤Л╨╕╤Ж.png", "╨Я╨░╨╢ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨Я╨░╨╢ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨Я╨░╨╢ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
-            "╨Я╨░╨╢ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨а╤Л╤Ж╨░╤А╤М ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨а╤Л╤Ж╨░╤А╤М ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
-            "╨а╤Л╤Ж╨░╤А╤М ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨а╤Л╤Ж╨░╤А╤М ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨б╤Г╨┤.png", "╨б╨┐╤А╨░╨▓╨╡╨┤╨╗╨╕╨▓╨╛╤Б╤В╤М.png",
-            "╨б╨╕╨╗╨░.png", "╨б╨╛╨╗╨╜╤Ж╨╡.png", "╨б╨╝╨╡╤А╤В╤М.png", "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
-            "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
-            "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨в╤Г╨╖ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨в╤Г╨╖ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨в╤Г╨╖ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨в╤Г╨╖ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
-            "╨г╨╝╨╡╤А╨╡╨╜╨╜╨╛╤Б╤В╤М.png", "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
-            "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png", "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png", "╨и╤Г╤В.png",
-            "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png", "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png", "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨С╨░╤И╨╜╤П.png",
+            "╨Т╨╗╤О╨▒╨╗╨╡╨╜╨╜╤Л╨╡.png",
+            "╨Т╨╛╤Б╤М╨╝╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Т╨╛╤Б╤М╨╝╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Т╨╛╤Б╤М╨╝╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Т╨╛╤Б╤М╨╝╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Т╨╡╤А╤Е╨╛╨▓╨╜╨░╤П ╨Ц╤А╨╕╤Ж╨░.png",
+            "╨Ф╤М╤П╨▓╨╛╨╗.png",
+            "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ф╨╡╤Б╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ф╨╡╨▓╤П╤В╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ф╨▓╨╛╨╕╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Ч╨▓╨╡╨╖╨┤╨░.png",
+            "╨Ш╨╝╨┐╨╡╤А╨░╤В╤А╨╕╤Ж╨░.png",
+            "╨Ш╨╝╨┐╨╡╤А╨░╤В╨╛╤А.png",
+            "╨Ш╨╡╤А╨╛╤Д╨░╨╜╤В.png",
+            "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Ъ╨╛╤А╨╛╨╗╤М ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ъ╨╛╤А╨╛╨╗╤М ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Ъ╨╛╤А╨╛╨╗╨╡╨▓╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Ъ╨╛╨╗╨╡╤Б╨╛ ╨д╨╛╤А╤В╤Г╨╜╤Л.png",
+            "╨Ъ╨╛╨╗╨╡╤Б╨╜╨╕╤Ж╨░.png",
+            "╨Ы╤Г╨╜╨░.png",
+            "╨Ь╨╕╤А.png",
+            "╨Ь╨░╨│.png",
+            "╨Ю╤В╤И╨╡╨╗╤М╨╜╨╕╨║.png",
+            "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Я╤П╤В╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Я╤П╤В╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨Я╨╛╨▓╨╡╤И╨╡╨╜╨╜╤Л╨╕╠Ж.png",
+            "╨Я╨░╨╢ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨Я╨░╨╢ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨Я╨░╨╢ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨Я╨░╨╢ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨а╤Л╤Ж╨░╤А╤М ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨а╤Л╤Ж╨░╤А╤М ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨а╤Л╤Ж╨░╤А╤М ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨а╤Л╤Ж╨░╤А╤М ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨б╤Г╨┤.png",
+            "╨б╨┐╤А╨░╨▓╨╡╨┤╨╗╨╕╨▓╨╛╤Б╤В╤М.png",
+            "╨б╨╕╨╗╨░.png",
+            "╨б╨╛╨╗╨╜╤Ж╨╡.png",
+            "╨б╨╝╨╡╤А╤В╤М.png",
+            "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨б╨╡╨╝╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨в╤А╨╛╨╕╠Ж╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨в╤Г╨╖ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨в╤Г╨╖ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨в╤Г╨╖ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨в╤Г╨╖ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨г╨╝╨╡╤А╨╡╨╜╨╜╨╛╤Б╤В╤М.png",
+            "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
+            "╨з╨╡╤В╨▓╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png",
+            "╨и╤Г╤В.png",
+            "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ц╨╡╨╖╨╗╨╛╨▓.png",
+            "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ъ╤Г╨▒╨║╨╛╨▓.png",
+            "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Ь╨╡╤З╨╡╨╕╠Ж.png",
             "╨и╨╡╤Б╤В╨╡╤А╨║╨░ ╨Я╨╡╨╜╤В╨░╨║╨╗╨╡╨╕╠Ж.png"
-        ];
+            ];
 
         selectedCardFilenames = [];
         let availableFiles = [...cardFiles];
