--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             opacity: 0.9;
             width: 50px;
             height: 50px;
-             z-index: 1;
+            z-index: 1;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .star.background-star {
