--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
     function onNextButtonClick() {
         selectedStars = 0;
-        document.body.style.backgroundColor = '#f2a8a8';
+        document.body.style.backgroundColor = 'rgb(237 129 124)';
         cardTitle.classList.add('card-title-hidden');
         instruction.classList.remove('instruction-hidden');
         stars.forEach(star => {
