--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
             opacity: 0.4;
         }
 
-
         .star.darkened-selected {
             opacity: 0.4;
         }
@@ -63,6 +62,7 @@
             font-size: 1.2em;
             font-weight: bold;
             white-space: nowrap;
+            z-index: 2;
         }
 
         .instruction-hidden { display: none; }
@@ -77,6 +77,7 @@
             transform: translate(-50%, -50%);
             opacity: 0;
             transition: opacity 0.5s ease;
+            z-index: 2;
         }
 
         .card-container.visible { opacity: 1; }
@@ -84,22 +85,23 @@
         .card {
             width: 100px;
             height: 150px;
-            border: 4px solid #fff;
+            border: 6px solid #f5f5dc; /* Beige border */
             border-radius: 10px;
             margin: 0 10px;
             cursor: pointer;
             position: relative;
             background-size: cover;
+            z-index: 2;
         }
 
         .next-button {
            background-color: #ffeb3b;
-            color: #000;
-            padding: 15px 30px;
+            color: #333; /* Dark gray color */
+            padding: 12px 45px; /* Increased padding for a bigger button */
             border-radius: 15px;
             border: none;
             cursor: pointer;
-            font-size: 18px;
+            font-size: 20px; /* Increased font-size for a bigger text */
             margin-top: 20px;
             display: none;
             position: absolute;
@@ -108,6 +110,7 @@
             bottom: 23%;
             z-index: 2;
             box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            font-weight: bold; /* Make the text bold */
         }
 
         .card-title {
@@ -118,6 +121,8 @@
             top: 200px;
             left: 50%;
             transform: translateX(-50%);
+            z-index: 2;
+            font-weight: bold; /* Make the text bold */
         }
 
         .card-title-hidden { display: none; }
