--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
         .card-container.visible { opacity: 1; }
 
         .card {
-           /* Set the fixed dimensions */
-            width: 100px;
-            height: 175.67px; /* 100 * (527/300) = 175.67 Maintain 300:527 ratio */
-            border: 6px solid #f5f5dc; /* Beige border */
-            border-radius: 10px;
-            margin: 0 10px;
+           /* Set the fixed dimensions - REDUCED SIZE */
+            width: 70px; /* Reduced from 100px */
+            height: 123px; /* Reduced from 175.67px, maintaining aspect ratio */
+            border: 4px solid #f5f5dc; /* Beige border */
+            border-radius: 8px;
+            margin: 0 7px; /* Reduced margin */
             cursor: pointer;
             position: relative;
             background-size: cover; /* This is VERY important to make the image fill the fixed size */
@@ -131,10 +131,10 @@
 
         .temporary-card {
             position: absolute;
-            width: 100px;
-            height: 175.67px;
-            border: 6px solid #f5f5dc;
-            border-radius: 10px;
+            width: 70px; /* Reduced from 100px */
+            height: 123px; /* Reduced from 175.67px, maintaining aspect ratio */
+            border: 4px solid #f5f5dc; /* Beige border */
+            border-radius: 8px;
             background-size: cover;
             background-position: center;
             z-index: 3;
