--- a/index.html
+++ b/index.html
@@ -83,27 +83,26 @@
         .card-container.visible { opacity: 1; }
 
         .card {
-           /* Set the fixed dimensions - REDUCED SIZE */
-            width: 80px; /* Reduced from 100px */
-            height: 140.53px; /* Reduced from 175.67px, maintaining aspect ratio */
-            border: 4px solid #f5f5dc; /* Beige border */
+            width: 80px;
+            height: 140.53px;
+            border: 4px solid #f5f5dc;
             border-radius: 8px;
-            margin: 0 7px; /* Reduced margin */
+            margin: 0 7px;
             cursor: pointer;
             position: relative;
-            background-size: cover; /* This is VERY important to make the image fill the fixed size */
-            background-position: center; /* Center the image within the fixed size */
+            background-size: cover;
+            background-position: center;
             z-index: 2;
         }
 
         .next-button {
            background-color: #ffeb3b;
-            color: #333; /* Dark gray color */
-            padding: 12px 45px; /* Increased padding for a bigger button */
+            color: #333;
+            padding: 12px 45px;
             border-radius: 15px;
             border: none;
             cursor: pointer;
-            font-size: 20px; /* Increased font-size for a bigger text */
+            font-size: 20px;
             margin-top: 20px;
             display: none;
             position: absolute;
@@ -112,7 +111,7 @@
             bottom: 23%;
             z-index: 2;
             box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-            font-weight: bold; /* Make the text bold */
+            font-weight: bold;
         }
 
         .card-title {
@@ -124,32 +123,32 @@
             left: 50%;
             transform: translateX(-50%);
             z-index: 2;
-            font-weight: bold; /* Make the text bold */
+            font-weight: bold;
         }
 
         .card-title-hidden { display: none; }
 
         .temporary-card {
             position: absolute;
-            width: 70px; /* Reduced from 100px */
-            height: 123px; /* Reduced from 175.67px, maintaining aspect ratio */
-            border: 4px solid #f5f5dc; /* Beige border */
+            width: 70px;
+            height: 123px;
+            border: 4px solid #f5f5dc;
             border-radius: 8px;
             background-size: cover;
             background-position: center;
             z-index: 3;
-            transition: transform 6s ease, opacity 0.5s ease; /* Changed to 4 seconds */
+            transition: transform 6s ease, opacity 0.5s ease;
         }
 
         body.dark-mode {
-            background-color: #444; /* Darker background color */
-            transition: background-color 4s ease; /* Added transition for background color */
+            background-color: #444;
+            transition: background-color 4s ease;
         }
 
         .card-title.card-title-visible,
         .next-button.next-button-visible {
             opacity: 1;
-            transition: opacity 2s ease 2s; /* Fade in after 2 seconds, over 2 seconds */
+            transition: opacity 2s ease 2s;
         }
     </style>
 </head>
@@ -165,8 +164,7 @@
     const tg = window.Telegram.WebApp;
     tg.expand();
 
-    // Variable to control the number of stars to choose and cards to show
-    const numberOfChoices = 3; // You can change this value
+    const numberOfChoices = 3;
     let selectedStars = 0;
     const totalStars = 15;
     const stars = [];
@@ -180,7 +178,6 @@
     const body = document.querySelector('body');
     const starsToChooseSpan = document.getElementById('starsToChoose');
 
-    // Use raw URLs for the two initial star images
     const initialStarFiles = [
         "https://raw.githubusercontent.com/Vasiliy-katsyka/stars/5f6e5f0e7d869bc594d813ad68ccbf16d2c1e3cd/Vector2.svg",
         "https://raw.githubusercontent.com/Vasiliy-katsyka/stars/5f6e5f0e7d869bc594d813ad68ccbf16d2c1e3cd/Vector.svg"
@@ -199,19 +196,18 @@
         });
     }
 
-    preloadImages(initialStarFiles); // Preload the initial star images
+    preloadImages(initialStarFiles);
 
 
    function selectStar(event) {
         const star = event.currentTarget;
         if (!cardContainer.classList.contains('visible') && !star.classList.contains('selected') && selectedStars < numberOfChoices) {
-            const currentBackgroundImage = star.style.backgroundImage.slice(5, -2); // Extract URL from backgroundImage
+            const currentBackgroundImage = star.style.backgroundImage.slice(5, -2);
             let selectedStarFile = selectedStarMap[currentBackgroundImage];
 
             if (selectedStarFile) {
                 star.style.backgroundImage = `url(${selectedStarFile})`;
             } else {
-                // Handle case where the initial image doesn't have a specific selected state
                 console.warn("No selected image defined for:", currentBackgroundImage);
                  return;
              }
@@ -237,9 +233,8 @@
             star.style.width = `${size}px`;
             star.style.height = `${size}px`;
 
-            // Use only the two initial star files
             const randomStarFile = initialStarFiles[Math.floor(Math.random() * initialStarFiles.length)];
-            star.style.backgroundImage = `url(${randomStarFile})`;  // No need to encode, already raw URLs
+            star.style.backgroundImage = `url(${randomStarFile})`;
 
 
             let left, top, attempts = 0;
@@ -390,21 +385,20 @@
             container.appendChild(tempCard);
 
 
-            // Store a reference to the card
             star.tempCard = tempCard;
         });
 
         setTimeout(() => {
             body.classList.add('dark-mode');
              showCards();
-        }, 50);  // Short delay to allow DOM updates
+        }, 50);
     }
 
 
    function showCards() {
        const filenames = selectedCardFilenames;
         instruction.classList.add('instruction-hidden');
-         //add to show temporary card
+
          stars.filter(star => star.classList.contains('selected')).forEach((star, index) => {
             const tempCard = document.createElement('div');
             tempCard.classList.add('card');
@@ -426,12 +420,12 @@
                 star.classList.add('background-star');
                 if (star.classList.contains('selected')) {
                     star.classList.add('darkened-selected');
-                     // Hide or remove the temporary card
+
                     if (star.tempCard) {
                         star.tempCard.style.opacity = '0';
                         setTimeout(() => {
                             star.tempCard.remove();
-                        }, 500); // Wait for transition
+                        }, 500);
                     }
                 }
                 star.style.cursor = 'default';
@@ -463,7 +457,7 @@
         instruction.classList.remove('instruction-hidden');
         stars.forEach(star => {
             star.classList.remove('background-star', 'selected', 'darkened-selected');
-            // Reset to initial star images
+
              const randomStarFile = initialStarFiles[Math.floor(Math.random() * initialStarFiles.length)];
              star.style.backgroundImage = `url(${randomStarFile})`;
 
@@ -484,7 +478,6 @@
         body.classList.remove('dark-mode');
     }
 
-    // Initialize the number of stars to choose in the instruction
     starsToChooseSpan.textContent = numberOfChoices;
     createStars();
 </script>
