--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
         .card-container.visible { opacity: 1; }
 
         .card {
-            width: 100px;
-            height: 175.67px;
-            border: 5px solid #f5f5dc;
-            border-radius: 10px;
+            width: 85px;
+            height: 149.36px;
+            border: 4px solid #f5f5dc;
+            border-radius: 8px;
             margin: 0 7px;
             cursor: pointer;
             position: relative;
@@ -95,7 +95,7 @@
             z-index: 2;
             transition: width 5s ease, height 5s ease, border-width 5s ease, border-radius 5s ease;
         }
-         .card.smaller { /* Apply smaller size if more than 3 cards */
+         .card.smaller {
             width: 60px;
             height: 105.4px;
             border-width: 3px;
